package core;

import com.zaxxer.hikari.HikariDataSource;

import java.lang.reflect.Field;
import java.sql.PreparedStatement;
import java.util.List;
import java.util.Optional;

public class DatabaseManager {

    // Singleton instance
    private static DatabaseManager instance;

    // Data source
    private HikariDataSource dataSource;

    // Configuration
    private static String URL;
    private static String USER;
    private static String PASSWORD;

    // Private constructor
    private DatabaseManager() {
        initializeDatabase();
    }

    // ========================
    // Lifecycle & Setup
    // ========================

    public static synchronized DatabaseManager getInstance() {
        if (instance == null) {
            synchronized (DatabaseManager.class) {
                if (instance == null) {
                    instance = new DatabaseManager();
                }
            }
        }
        return instance;
    }

    public void shutdown() {
        if (dataSource != null) {
            dataSource.close();
        }
    }

    private void initializeDatabase() {
        // Initialize HikariCP, configure URL/USER/PASSWORD
    }

    public void seedDatabase() {
        // Seed initial data
    }

    // ========================
    // Core Execution
    // ========================

    public <T> T executeQuery(String sql, QueryHandler<T> handler, Object[] params) {
        // Execute query and delegate ResultSet handling
        return null;
    }

    public int executeUpdate(String sql, Object[] params) {
        // Execute update/delete
        return 0;
    }

    public int executeInsert(String sql, Object[] params) {
        // Execute insert and return affected rows or generated key
        return 0;
    }

    public <T> List<T> fetchList(String sql, QueryHandler<T> rowMapper, Object[] params) {
        // Fetch multiple rows
        return null;
    }

    public <T> T fetch(String sql, QueryHandler<T> rowMapper, Object[] params) {
        // Fetch single row
        return null;
    }

    // ========================
    // Object Retrieval (ORM)
    // ========================

    public <T> T fetchOne(Class<T> clazz, String idColumn, Object idValue) {
        // Fetch one entity by ID
        return null;
    }

    public <T> List<T> fetchMany(Class<T> clazz, String fkColumn, Object value) {
        // Fetch entities by foreign key
        return null;
    }

    public <T> List<T> fetchManyToMany(
            Class<T> targetClass,
            String joinTable,
            String joinCol,
            String invJoinCol,
            Object sourceId
    ) {
        // Fetch many-to-many relationship
        return null;
    }

    private <T> QueryHandler<T> autoMapper(Class<T> clazz) {
        // Automatically map ResultSet → object
        return null;
    }

    // ========================
    // Persistence
    // ========================

    public <T> void upsertAll(List<T> items) {
        // Batch upsert
    }

    public <T> void upsert(T item) {
        // Insert or update
    }

    public <T> void delete(T item) {
        // Delete entity
    }

    public <T> void deleteAll(List<T> items) {
        // Batch delete
    }

    private <T> void propagateGeneratedKeys(
            PreparedStatement pstmt,
            List<T> items,
            List<Field> localFields
    ) {
        // Assign generated IDs back to entities
    }

    // ========================
    // Reflection & SQL Building
    // ========================

    protected String buildUpsertSql(
            String tableName,
            List<Field> allColumns,
            List<Field> keyColumns
    ) {
        return null;
    }

    protected String buildJoinedFromClause(Class<?> clazz) {
        return null;
    }

    private List<Class<?>> getTableHierarchy(Class<?> clazz) {
        return null;
    }

    private List<Field> getAnnotatedFields(Class<?> clazz) {
        return null;
    }

    private List<Field> getAllAnnotatedFields(Class<?> clazz) {
        return null;
    }

    private List<Field> getIdAnnotatedFields(List<Field> allFields) {
        return null;
    }

    private String getPrimaryIdColumnName(Class<?> targetClass) {
        return null;
    }

    private Optional<Field> getPrimaryIdColumn(Class<?> targetClass) {
        return Optional.empty();
    }

    private List<Field> getUpsertFields(List<Field> allFields, Class<?> clazz) {
        return null;
    }

    private void setParameters(PreparedStatement pstmt, Object[] params) {
        // Bind parameters to PreparedStatement
    }
}

